--- a/index.html
+++ b/index.html
@@ -6,13 +6,371 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ecommerce site</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+
     </head>
-
+    
     <body>
+        <!-- Header Sectoion Start-->
+        <section id="header">
+            <a href="#"><img src="img/logo.png" class="logo" Salt=""></a>
+            
+            <div>
+                <ul id="navbar">
+                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="cart.html"><i class="far fa-shopping-bag"></i></a></li>
+                </ul>
+            </div>
+        </section>
+        <!-- Header Section End -->
+
+        <!-- Hero Section Start-->
+        <section id="hero">
+            <h4>Trade-in-Offer</h4>
+            <h2>Super Value deals</h2>
+            <h1>On all products</h1>
+            <p>Save more with coupons and up to 70% off!</p>
+            <button>Shop Now</button>
+        </section>
+        <!-- Hero Section End -->
+
+        <!-- Feature Section Start -->
+        <section id="feature" class="section-p1">
+            <div class="fe-box">
+                <img src="img/Feature/f2.png" alt="">
+                <h6>Free Shipping</h6>
+            </div>
+            <div class="fe-box">
+                <img src="img/Feature/f1.png" alt="">
+                <h6>Online Order</h6>
+            </div>
+            <div class="fe-box">
+                <img src="img/Feature/f3.png" alt="">
+                <h6>Save Money</h6>
+            </div>
+            <div class="fe-box">
+                <img src="img/Feature/f4.png" alt="">
+                <h6>Promotions</h6>
+            </div>
+            <div class="fe-box">
+                <img src="img/Feature/f5.png" alt="">
+                <h6>Happy Sell</h6>
+            </div>
+            <div class="fe-box">
+                <img src="img/Feature/f6.png" alt="">
+                <h6>Support</h6>
+            </div>
+        </section>
+        <!-- Feature Section End -->
+
+        <!-- Product Section Start -->
+        <section id="product1" class="section-p1">
+            <h2>Feature products</h2>
+            <p>Summer Collection New Design</p>
+            <div class="pro-container">
+                <div class="pro">
+                    <img src="img/Products/f1.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/Products/f2.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/f3.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/f4.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/f5.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/f6.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/f7.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/f8.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
 
 
+            </div>
+
+        </section>
+        <!-- Product Section End -->
+
+        <!-- Banner Section Start -->
+        <section id="banner" class="section-m1">
+            <h4>Repair Services</h4>
+            <h2>Up to <span>70% off</span>- all T-shirts and Accessories</h2>
+            <button class="normal">Explore More</button>
+        </section>
+        <!-- Banner Section End -->
+
+        <!-- New Arrival Section Start -->
+        <section id="product1" class="section-p1">
+            <h2>New Arrivals</h2>
+            <p>Summer Collection New Design</p>
+            <div class="pro-container">
+                <div class="pro">
+                    <img src="img/Products/n1.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+                <div class="pro">
+                    <img src="img/Products/n2.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/n3.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/n4.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/n5.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/n6.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/n7.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
+
+                <div class="pro">
+                    <img src="img/Products/n8.jpg" alt="">
+                    <div class="des">
+                        <span>adidas</span>
+                        <h5>Cartoon Astronaut T-Shirts</h5>
+                        <div class="star">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <h4>$78</h4>
+                    </div>
+                    <a href="#"><i id="cart" class="fal fa-shopping-cart"></i></a>
+                </div>
 
 
+            </div>
+
+        </section>
+        <!-- New Arrival Section End -->
+
+        <!-- Small Banner Section Start -->
+
+
+        <!-- Small Banner Section End -->
         <script src="script.js"></script>
     </body>
 </html>
